--- a/app/src/main/res/layout/activity_driver_detail.xml
+++ b/app/src/main/res/layout/activity_driver_detail.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgound"
+    android:background="@color/colorNearWhite"
     tools:context="id.rentist.mitrarentist.DriverDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -22,13 +23,5 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_driver_detail" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_edit_black_36dp" />
 
 </android.support.design.widget.CoordinatorLayout>
