--- a/app/src/main/res/menu/menu_edit_option.xml
+++ b/app/src/main/res/menu/menu_edit_option.xml
@@ -5,10 +5,10 @@
 
     <!--menu yang akan tampil pada toolbar-->
     <item
-        android:id="@+id/action_help"
+        android:id="@+id/action_edit"
         android:orderInCategory="100"
         android:title="@string/action_search"
-        android:icon="@drawable/ic_help_outline_white_24dp"
+        android:icon="@drawable/ic_edit_white_24dp"
         app:showAsAction="always" />
 
 </menu>
