--- a/app/src/main/res/layout/content_form_voucher.xml
+++ b/app/src/main/res/layout/content_form_voucher.xml
@@ -166,6 +166,7 @@
                     android:layout_columnWeight="0"/>
 
                 <Spinner
+                    android:layout_column="1"
                     android:id="@+id/vou_spinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -173,8 +174,6 @@
                     android:entries="@array/asset_category_entries"
                     android:padding="@dimen/xmin_padding"
                     app:layout_gravity="bottom" />
-
-
 
             </GridLayout>
 
@@ -262,7 +261,7 @@
         android:background="@color/colorPrimaryDark"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/medium_text"
-        android:text="Tambah"
+        android:text="Simpan"
         android:layout_margin="0dp"
         android:padding="0dp" />
 
