--- a/app/src/main/res/layout/voucher_item_view.xml
+++ b/app/src/main/res/layout/voucher_item_view.xml
@@ -71,118 +71,100 @@
                 android:columnCount="2"
                 android:layout_marginTop="@dimen/min_padding">
 
-                <TextView
-                    android:id="@+id/vou_discount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:text="10000 IDR"
-                    android:textColor="@color/colorPrice"
-                    android:textSize="@dimen/medium_text" />
-
-
-                <TextView
-                    android:id="@+id/vou_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Type"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/medium_text"
-                    android:layout_column="1"
-                    android:layout_gravity="end"/>
-
-                <!--<TextView-->
-                        <!--android:id="@+id/vou_amount_text"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginTop="@dimen/xmin_padding"-->
-                        <!--android:text="Kuota: "-->
-                        <!--android:textColor="@color/colorBlack"-->
-                        <!--android:textSize="@dimen/medium_text" />-->
-
-                    <!--<TextView-->
-                        <!--android:id="@+id/vou_amount"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:layout_marginTop="@dimen/xmin_padding"-->
-                        <!--android:text="100"-->
-                        <!--android:textColor="@color/colorBlack"-->
-                        <!--android:textSize="@dimen/medium_text" />-->
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_column="0"
-                    >
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_column="1"
+                    android:layout_gravity="end">
 
                     <TextView
-                        android:id="@+id/vou_date"
+                        android:id="@+id/vou_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Type"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/medium_text" />
+
+                    <TextView
+                        android:id="@+id/vou_edit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="07 Juli 2017"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/small_text"
-                        />
+                        android:text="Ubah"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/medium_text"
+                        android:clickable="true"
+                        android:layout_gravity="end"
+                      />
 
-                    <TextView
-                        android:id="@+id/vou_sampai"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text=" s/d "
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="@dimen/small_text"
-                        />
 
-                    <TextView
-                        android:id="@+id/vou_endDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:text="21 Juli 2017"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/small_text" />
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/vou_desc"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:text="desc"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="@dimen/small_text" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_column="0">
 
-                <TextView
-                    android:id="@+id/vou_edit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:text="Ubah"
-                    android:layout_gravity="end"
-                    android:layout_marginStart="@dimen/min_padding"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/medium_text"
-                    android:clickable="true"/>
+                    <TextView
+                        android:id="@+id/vou_discount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10000 IDR"
+                        android:textColor="@color/colorPrice"
+                        android:textSize="@dimen/medium_text" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+
+                            <TextView
+                                android:id="@+id/vou_date"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/xmin_padding"
+                                android:text="07 Juli 2017"
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/small_text"
+                                />
+
+                            <TextView
+                                android:id="@+id/vou_sampai"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/xmin_padding"
+                                android:text=" s/d "
+                                android:textColor="@android:color/darker_gray"
+                                android:textSize="@dimen/small_text"
+                                />
+
+                            <TextView
+                                android:id="@+id/vou_endDate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/xmin_padding"
+                                android:text="21 Juli 2017"
+                                android:textColor="@android:color/black"
+                                android:textSize="@dimen/small_text" />
+                        </LinearLayout>
+
+
+                </LinearLayout>
 
             </GridLayout>
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/vou_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/xmin_padding"
-                >
+                android:text="desc"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="@dimen/small_text" />
 
-
-
-
-
-
-
-            </RelativeLayout>
 
         </LinearLayout>
 
