--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/xmin_padding"
     android:background="@color/colorBackgound"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.UserDetailActivity"
     tools:showIn="@layout/activity_detail_user">
@@ -24,8 +23,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
                 android:orientation="vertical"
                 android:padding="@dimen/min_padding">
+
+                <ImageView
+                    android:id="@+id/us_thumb"
+                    android:layout_width="@dimen/thumb_med_width"
+                    android:layout_height="@dimen/thumb_med_height"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="false"
+                    android:background="@drawable/img"
+                    android:cropToPadding="false" />
 
                 <TextView
                     android:id="@+id/us_name"
@@ -33,23 +43,20 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/xmin_padding"
                     android:layout_weight="1"
-                    android:text="Nama Pengguna"
+                    android:padding="@dimen/xmin_padding"
+                    android:text="Nama"
                     android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorWhite"
                     android:textSize="@dimen/large_text"
                     android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/us_thumb"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/user_ava_man" />
 
             </LinearLayout>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="@dimen/med_padding"
                 android:padding="@dimen/xmin_padding">
 
                 <LinearLayout
@@ -58,48 +65,42 @@
                     android:orientation="vertical">
 
                     <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/cardview_dark_background"
-                        android:padding="@dimen/min_padding">
-
-                        <TextView
-                            android:id="@+id/head_1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:layout_centerVertical="true"
-                            android:text="Data Pengguna"
-                            android:textColor="@color/colorWhite"
-                            android:textSize="@dimen/medium_text"
-                            android:textStyle="bold" />
-
-                    </RelativeLayout>
-
-                    <RelativeLayout
                         android:id="@+id/us_aRole"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/xmin_padding"
                         android:background="@color/colorPrimarySoft"
+                        android:padding="@dimen/min_padding"
                         tools:ignore="UselessParent">
 
                         <ImageView
                             android:id="@+id/us_role_ico"
-                            android:layout_width="@dimen/thumb_prop_width"
-                            android:layout_height="@dimen/thumb_prop_height"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/min_padding"
-                            android:contentDescription="loaction"
-                            app:srcCompat="@drawable/ic_person_black_18dp"/>
+                            android:contentDescription="user role"
+                            app:srcCompat="@drawable/ic_person_black_24dp" />
 
                         <TextView
                             android:id="@+id/us_role_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:layout_marginLeft="@dimen/xmin_padding"
                             android:layout_toEndOf="@+id/us_role_ico"
-                            android:text="User Role"
+                            android:text="-"
                             android:textSize="@dimen/medium_text"
                             android:textStyle="italic" />
+
+                        <TextView
+                            android:id="@+id/textView17"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/us_role_name"
+                            android:layout_marginLeft="@dimen/xmin_padding"
+                            android:layout_toEndOf="@+id/us_role_ico"
+                            android:text="Jenis Pengguna"
+                            android:textSize="12sp" />
 
                     </RelativeLayout>
 
@@ -107,24 +108,38 @@
                         android:id="@+id/us_no_telp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/xmin_padding"
+                        android:padding="@dimen/min_padding"
                         tools:ignore="UselessParent">
 
                         <ImageView
                             android:id="@+id/pr_telp_ico"
-                            android:layout_width="@dimen/thumb_prop_width"
-                            android:layout_height="@dimen/thumb_prop_height"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/min_padding"
                             android:contentDescription="phone"
-                            app:srcCompat="@drawable/ic_phone_android_black_24dp"/>
+                            app:srcCompat="@drawable/ic_phone_android_black_24dp" />
 
                         <TextView
                             android:id="@+id/us_phone_number"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:layout_marginLeft="@dimen/xmin_padding"
                             android:layout_toEndOf="@+id/pr_telp_ico"
-                            android:text="081 xxx xxx xxx"
-                            android:textSize="@dimen/medium_text"/>
+                            android:text="-"
+                            android:textSize="@dimen/medium_text"
+                            android:textStyle="italic" />
+
+                        <TextView
+                            android:id="@+id/textView18"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/us_phone_number"
+                            android:layout_marginLeft="@dimen/xmin_padding"
+                            android:layout_toEndOf="@+id/pr_telp_ico"
+                            android:text="Telepon"
+                            android:textSize="12sp" />
 
                     </RelativeLayout>
 
@@ -132,29 +147,41 @@
                         android:id="@+id/us_mail_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/xmin_padding"
                         android:background="@color/colorPrimarySoft"
+                        android:padding="@dimen/min_padding"
                         tools:ignore="UselessParent">
 
                         <ImageView
                             android:id="@+id/us_email_ico"
-                            android:layout_width="@dimen/thumb_prop_width"
-                            android:layout_height="@dimen/thumb_prop_height"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_centerVertical="true"
                             android:layout_marginEnd="@dimen/min_padding"
                             android:contentDescription="email"
-                            app:srcCompat="@drawable/ic_email_black_24dp"/>
+                            app:srcCompat="@drawable/ic_email_black_24dp" />
 
                         <TextView
                             android:id="@+id/us_email"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:layout_marginLeft="@dimen/xmin_padding"
                             android:layout_toEndOf="@+id/us_email_ico"
-                            android:text="user@mail.com"
-                            android:textSize="@dimen/medium_text"/>
+                            android:text="-"
+                            android:textSize="@dimen/medium_text"
+                            android:textStyle="italic" />
+
+                        <TextView
+                            android:id="@+id/textView19"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/us_email"
+                            android:layout_marginLeft="@dimen/xmin_padding"
+                            android:layout_toEndOf="@+id/us_email_ico"
+                            android:text="Email"
+                            android:textSize="12sp" />
 
                     </RelativeLayout>
-
-
 
                 </LinearLayout>
 
