--- a/app/src/main/res/layout/content_aset_list.xml
+++ b/app/src/main/res/layout/content_aset_list.xml
@@ -11,9 +11,9 @@
     tools:showIn="@layout/activity_aset">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/ac_recyclerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/as_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:padding="@dimen/xmin_padding">
     </android.support.v7.widget.RecyclerView>
 
