--- a/app/src/main/res/layout/content_aset.xml
+++ b/app/src/main/res/layout/content_aset.xml
@@ -12,7 +12,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ac_recyclerView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/xmin_padding">
     </android.support.v7.widget.RecyclerView>
