--- a/app/src/main/res/layout/activity_form_car_aset.xml
+++ b/app/src/main/res/layout/activity_form_car_aset.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="id.rentist.mitrarentist.FormAsetActivity">
+    tools:context="id.rentist.mitrarentist.FormCarAsetActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,14 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_form_aset" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_save_black_36dp" />
+    <include layout="@layout/content_form_car_aset" />
 
 </android.support.design.widget.CoordinatorLayout>
