--- a/app/src/main/res/layout/content_aset_list.xml
+++ b/app/src/main/res/layout/content_aset_list.xml
@@ -8,13 +8,20 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.AsetListActivity"
     android:background="@color/colorBackgound"
-    tools:showIn="@layout/activity_aset">
+    tools:showIn="@layout/activity_aset_list">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/as_recyclerView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/min_padding">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/as_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/min_padding">
+        </android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
