--- a/app/src/main/res/layout/content_detail_aset.xml
+++ b/app/src/main/res/layout/content_detail_aset.xml
@@ -1,278 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackgound"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.DetailAsetActivity"
-    tools:showIn="@layout/activity_asset_detail"
-    android:padding="@dimen/xmin_padding">
+    tools:showIn="@layout/activity_asset_detail">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/card_view_transaksi"
-            android:layout_marginBottom="@dimen/xmin_padding"
-            android:background="@drawable/radius_white"
-            app:cardBackgroundColor="@color/colorWhite"
-            app:cardElevation="1dp"
-            android:foreground="?selectableItemBackground"
-            android:clickable="false"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/xmin_padding">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/min_padding"
+                android:background="@color/colorNearWhite">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/det_as_thumb_aset_l">
+                <ImageView
+                    android:id="@+id/as_thumb_aset"
+                    android:layout_width="match_parent"
+                    android:layout_height="192dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:contentDescription="itemAset"
+                    android:foregroundGravity="center_horizontal|center_vertical"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_directions_car_black_48dp" />
 
-                    <RelativeLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/as_status_det"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/colorPrimaryTrans"
+                    android:gravity="center"
+                    android:text="@string/status_aktif"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/det_as_rating_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="@dimen/xmin_padding"
-                            android:layout_marginStart="@dimen/xmin_padding"
-                            android:layout_alignParentStart="true"
-                            android:textSize="@dimen/small_text" />
+            </RelativeLayout>
 
-                        <com.iarcuschin.simpleratingbar.SimpleRatingBar
-                            android:id="@+id/det_aset_rating"
-                            style="@style/CustomRatingBar"
-                            android:layout_width="70dp"
-                            android:layout_height="25dp"
-                            android:layout_margin="@dimen/xmin_padding"
-                            android:layout_marginLeft="0dp"
-                            android:layout_toRightOf="@+id/det_as_rating_text"
-                            app:srb_rating="4.5" />
-
-                    </RelativeLayout>
-
-
-                    <ImageView
-                        android:id="@+id/det_as_thumb_aset"
-                        android:layout_width="@dimen/thumb_width"
-                        android:layout_height="@dimen/thumb_height"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginEnd="@dimen/xmin_padding"
-                        android:layout_marginStart="@dimen/xmin_padding"
-                        android:layout_marginTop="@dimen/xmin_padding"
-                        android:layout_below="@+id/det_aset_rating"
-                        android:foregroundGravity="center_horizontal|center_vertical"
-                        android:contentDescription="itemAset"/>
-
-                </LinearLayout>
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_view_transaksi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/min_padding"
+                android:background="@drawable/radius_white"
+                android:clickable="false"
+                android:foreground="?selectableItemBackground"
+                app:cardBackgroundColor="@color/colorWhite"
+                app:cardElevation="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_toEndOf="@+id/det_as_thumb_aset_l">
+                    android:padding="@dimen/min_padding">
 
-                    <RelativeLayout
-                        android:id="@+id/det_as_harga_sewa"
+                    <TextView
+                        android:id="@+id/as_mark_det"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/colorPrimarySoft"
+                        android:gravity="center_vertical"
+                        android:lines="2"
                         android:padding="@dimen/xmin_padding"
-                        tools:ignore="UselessParent">
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        tools:text="SUZUKI ERTIGA" />
 
-                        <ImageView
-                            android:id="@+id/det_as_harga_thumb"
-                            android:layout_width="@dimen/thumb_prop_width"
-                            android:layout_height="@dimen/thumb_prop_height"
-                            android:layout_marginEnd="@dimen/min_padding"
-                            app:srcCompat="@drawable/ic_monetization_on_black_18dp"
-                            android:contentDescription="price"/>
-
-                        <TextView
-                            android:id="@+id/det_as_harga_det"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_toEndOf="@+id/det_as_harga_thumb"/>
-
-                    </RelativeLayout>
-
-                    <LinearLayout
+                    <TextView
+                        android:id="@+id/as_year_det"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="@dimen/xmin_padding">
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/as_harga_thumb"
+                        android:padding="@dimen/xmin_padding"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorPrice"
+                        android:textSize="@dimen/medium_text"
+                        tools:text="2017" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="Fitur : "/>
-
-                        <GridLayout
-                            android:id="@+id/det_as_grid_fitur"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/xmin_padding"
-                            android:columnCount="2">
-
-                            <RelativeLayout
-                                android:id="@+id/det_as_fitur_1"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="@dimen/min_padding">
-
-                                <ImageView
-                                    android:id="@+id/det_as_fitur_1_ico"
-                                    android:layout_width="@dimen/thumb_prop_width"
-                                    android:layout_height="@dimen/thumb_prop_height"
-                                    android:layout_marginEnd="@dimen/xmin_padding"
-                                    app:srcCompat="@drawable/ic_monetization_on_black_18dp"
-                                    android:contentDescription="price"/>
-
-                                <TextView
-                                    android:id="@+id/det_as_fitur_1_det"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_toRightOf="@id/det_as_fitur_1_ico"
-                                    android:text="8 kursi"/>
-                            </RelativeLayout>
-
-                            <RelativeLayout
-                                android:id="@+id/det_as_fitur_2"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="@dimen/min_padding">
-
-                                <ImageView
-                                    android:id="@+id/det_as_fitur_2_ico"
-                                    android:layout_width="@dimen/thumb_prop_width"
-                                    android:layout_height="@dimen/thumb_prop_height"
-                                    android:layout_marginEnd="@dimen/xmin_padding"
-                                    app:srcCompat="@drawable/ic_monetization_on_black_18dp"
-                                    android:contentDescription="price"/>
-
-                                <TextView
-                                    android:id="@+id/det_as_fitur_2_det"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_toRightOf="@id/det_as_fitur_2_ico"
-                                    android:text="8 kursi"/>
-                            </RelativeLayout>
-
-                            <RelativeLayout
-                                android:id="@+id/det_as_fitur_3"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="@dimen/min_padding">
-
-                                <ImageView
-                                    android:id="@+id/det_as_fitur_3_ico"
-                                    android:layout_width="@dimen/thumb_prop_width"
-                                    android:layout_height="@dimen/thumb_prop_height"
-                                    android:layout_marginEnd="@dimen/xmin_padding"
-                                    app:srcCompat="@drawable/ic_monetization_on_black_18dp"
-                                    android:contentDescription="price"/>
-
-                                <TextView
-                                    android:id="@+id/det_as_fitur_3_det"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_toRightOf="@id/det_as_fitur_3_ico"
-                                    android:text="8 kursi"/>
-                            </RelativeLayout>
-
-                            <RelativeLayout
-                                android:id="@+id/det_as_fitur_4"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="@dimen/min_padding">
-
-                                <ImageView
-                                    android:id="@+id/det_as_fitur_4_ico"
-                                    android:layout_width="@dimen/thumb_prop_width"
-                                    android:layout_height="@dimen/thumb_prop_height"
-                                    android:layout_marginEnd="@dimen/xmin_padding"
-                                    app:srcCompat="@drawable/ic_monetization_on_black_18dp"
-                                    android:contentDescription="price"/>
-
-                                <TextView
-                                    android:id="@+id/det_as_fitur_4_det"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_toRightOf="@id/det_as_fitur_4_ico"
-                                    android:text="8 kursi"/>
-                            </RelativeLayout>
-
-                        </GridLayout>
-                    </LinearLayout>
-
+                    <TextView
+                        android:id="@+id/as_subcat_det"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_weight="1"
+                        android:background="@color/colorPrimarySoft"
+                        android:padding="@dimen/xmin_padding"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/calendar_text_small"
+                        tools:text="Classic" />
 
 
                 </LinearLayout>
 
+            </android.support.v7.widget.CardView>
 
-
-            </RelativeLayout>
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingBottom="8dp"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="8dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:fontFamily="sans-serif"
-                android:text="@string/status_label"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/det_status_aset"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/radius_primary"
-                android:gravity="center"
-                android:text="@string/status_aktif"
-                android:textAlignment="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/min_padding">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="@dimen/min_padding">
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:capitalize="words"
+                        android:padding="@dimen/xmin_padding"
+                        android:text="Jadwal"
+                        android:textAlignment="center"
+                        android:textAllCaps="true"
+                        android:textColor="@color/colorBlack" />
+
+                    <CalendarView
+                        android:id="@+id/calendar_aset"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/calendar_bg"
+                        android:maxDate="30/12/2050"
+                        android:minDate="01/01/2017" />
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
+    </ScrollView>
 
-        <CalendarView
-            android:id="@+id/calendar_aset"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/calendar_bg"
-            android:minDate="01/01/2017"
-            android:maxDate="30/12/2050" />
-
-    </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
